Possible compatibility problems with earlier versions marked with '*'.

--- 1.8.7 2002/MM/DD

Fix OID for ILL.

--- 1.8.6 2002/03/25

Added PQF feature: '@attr type=value' may be written as '@type=value'.

Client displays USR.1:SearchResult-1 (hits per term).

Additional Search Info for search in Generic Frontend Server.

Fixed CCL parsing of "field=s".

WIN32 installer - using the excellent NSIS software from nullsoft.

Fixed CCL parsing of "field = - <number>".

Added function yaz_marc_decode that decodes MARC for line mode
display or XML (similar to that used by JZKit).

Fixed BER decoding of OPTIONAL CHOICE. The bug didn't affect the
Z39.50. But ISO/ILL was, however.

Added patch by Rustam T. Usmanov that implements Z39.50 duplicate
detection service (Z39.50-1995 Amendment 2) and Language Negotiation (3).
See:
 http://lcweb.loc.gov/z3950/agency/amend/am2.html
 http://lcweb.loc.gov/z3950/agency/defns/charneg-3.html

--- 1.8.5 2002/02/03

New YAZ client features: Command completion and new commands:
push_command, set_apdufile, set_marcdump, set_cclfields, register_oid.
Code provided by Jacob Poulsen.

New call oid_trav, that visits all registered OIDs via callback.

Function ZOOM_record_get now returns const char pointer rather than
void pointer. It saves a lot of type casts.

For YAZ client, command "auth" now allows you to set authentication
in IdPass style. It is enabled when three tokens are given - order
is user, group and password.

Fix memory leaks in MARC record handling for ZOOM.

New option for YAZ client, -k <kilobytes> that sets
maximum record size. Similar to -k option for generic frontend
server and yaz-ztest.

More fixes for scan. Non-zero stepSize handled. OID's fixes.

Prefix query parser reports "fail" when bad attribute set is given.

Fix in MARC decoder. Proximity logging. Fix for attribute set
in scan handler for server. Patches by Shigeru Ishida.

SSL/COMSTACK updates. cs_rcvconnect completes SSL handshake. ZOOM
works with SSL.
